[gd_scene load_steps=19 format=3 uid="uid://cv1nmkvtnh0ki"]

[ext_resource type="Script" uid="uid://dteuxthwaj6s1" path="res://Scripts/tela_monitor.gd" id="1_0727r"]
[ext_resource type="Texture2D" uid="uid://dtwvge3y84vxa" path="res://Assets/wallhaven-6d95gl.jpg" id="2_gh3ss"]
[ext_resource type="Texture2D" uid="uid://c1n8oavetg434" path="res://Assets/firefox.png" id="3_kcquq"]
[ext_resource type="Script" uid="uid://b4vgjtc8w0j2w" path="res://Scripts/janela_navegador.gd" id="4_62yoi"]
[ext_resource type="Texture2D" uid="uid://dvv4h06qxjh8f" path="res://Assets/window-minimize-symbolic.svg" id="5_mowo1"]
[ext_resource type="Texture2D" uid="uid://cistnfh2xl64d" path="res://Assets/window-maximize-symbolic.svg" id="6_mx5f6"]
[ext_resource type="Texture2D" uid="uid://du6yq3ix8550h" path="res://Assets/window-close-symbolic.svg" id="7_g0o0y"]
[ext_resource type="Theme" uid="uid://bbqhkpwyqnhr4" path="res://Themes/Topbar_app_name_theme.tres" id="8_oluvs"]
[ext_resource type="Texture2D" uid="uid://lkw6i6xrq3lu" path="res://Assets/reload-ui-svgrepo-com.svg" id="9_32g7d"]
[ext_resource type="Texture2D" uid="uid://bpci7wve5ijgs" path="res://Assets/setting-config-svgrepo-com.svg" id="10_iq4h1"]
[ext_resource type="Texture2D" uid="uid://b0yruxn8l0ame" path="res://Assets/186239.png" id="11_8moq3"]

[sub_resource type="GDScript" id="GDScript_ix4gu"]
script/source = "extends TextureButton

func _on_pressed() -> void:
	pass # Replace with function body.
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ix4gu"]
bg_color = Color(0.564706, 0.564706, 0.564706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6iyac"]
bg_color = Color(0.306923, 0.306923, 0.306923, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pm4d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ihrfl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bd5m"]
bg_color = Color(0.404511, 0.404511, 0.404511, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.305882, 0.305882, 0.305882, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7pnwy"]

[node name="PC" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 680.0

[node name="Monitor" type="Panel" parent="."]
custom_minimum_size = Vector2(980, 500)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0727r")

[node name="wallpaper" type="TextureRect" parent="Monitor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gh3ss")
expand_mode = 1

[node name="Icones" type="VBoxContainer" parent="Monitor"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 65.0
offset_bottom = 65.0
alignment = 1

[node name="Firefox" type="TextureButton" parent="Monitor/Icones"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture_normal = ExtResource("3_kcquq")
ignore_texture_size = true
stretch_mode = 0
script = SubResource("GDScript_ix4gu")

[node name="JanelaNavegador" type="Panel" parent="Monitor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ix4gu")
script = ExtResource("4_62yoi")

[node name="Topbar" type="PanelContainer" parent="Monitor/JanelaNavegador"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6iyac")

[node name="HBoxContainer" type="HBoxContainer" parent="Monitor/JanelaNavegador/Topbar"]
layout_mode = 2
size_flags_horizontal = 8

[node name="minimizar" type="TextureButton" parent="Monitor/JanelaNavegador/Topbar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_mowo1")

[node name="maximizar" type="TextureButton" parent="Monitor/JanelaNavegador/Topbar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_mx5f6")

[node name="fechar" type="TextureButton" parent="Monitor/JanelaNavegador/Topbar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("7_g0o0y")

[node name="Label" type="Label" parent="Monitor/JanelaNavegador/Topbar"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("8_oluvs")
text = "Firefox"
vertical_alignment = 1

[node name="Topbar2" type="PanelContainer" parent="Monitor/JanelaNavegador"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2pm4d")

[node name="HBoxContainer" type="HBoxContainer" parent="Monitor/JanelaNavegador/Topbar2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 4

[node name="HSeparator" type="HSeparator" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ihrfl")

[node name="Back" type="Label" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.196078, 0.215686, 0.223529, 1)
theme_override_font_sizes/font_size = 20
text = "<"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ihrfl")

[node name="Foward" type="Label" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.196078, 0.215686, 0.223529, 1)
theme_override_font_sizes/font_size = 20
text = ">"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ihrfl")

[node name="TextureRect" type="TextureRect" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_32g7d")
expand_mode = 1

[node name="HSeparator4" type="HSeparator" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ihrfl")

[node name="Panel" type="Panel" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_5bd5m")

[node name="PanelContainer" type="HBoxContainer" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator5" type="Label" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer/Panel/PanelContainer"]
layout_mode = 2
text = " "

[node name="Label" type="Label" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer/Panel/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.196078, 0.215686, 0.223529, 1)
theme_override_font_sizes/font_size = 14
text = "https://www.chinaimports.com"

[node name="HSeparator5" type="HSeparator" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ihrfl")

[node name="TextureRect2" type="TextureRect" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("10_iq4h1")
expand_mode = 1

[node name="HSeparator6" type="HSeparator" parent="Monitor/JanelaNavegador/Topbar2/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ihrfl")

[node name="Panel" type="Panel" parent="Monitor/JanelaNavegador"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7pnwy")

[node name="TextureRect" type="TextureRect" parent="Monitor/JanelaNavegador/Panel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = -100.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_8moq3")
expand_mode = 1

[node name="GridContainer" type="GridContainer" parent="Monitor/JanelaNavegador/Panel"]
layout_mode = 0
offset_left = 59.0
offset_top = 163.0
offset_right = 243.0
offset_bottom = 203.0
columns = 2

[node name="Quantidade" type="SpinBox" parent="Monitor/JanelaNavegador/Panel/GridContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
value = 1.0
alignment = 1

[node name="Comprar" type="Button" parent="Monitor/JanelaNavegador/Panel/GridContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "COMPRAR"

[connection signal="pressed" from="Monitor/Icones/Firefox" to="Monitor" method="_on_firefox_pressed"]
[connection signal="pressed" from="Monitor/JanelaNavegador/Topbar/HBoxContainer/minimizar" to="Monitor" method="_on_minimizar_pressed"]
[connection signal="pressed" from="Monitor/JanelaNavegador/Topbar/HBoxContainer/maximizar" to="Monitor/JanelaNavegador" method="_on_maximizar_pressed"]
[connection signal="pressed" from="Monitor/JanelaNavegador/Topbar/HBoxContainer/fechar" to="Monitor" method="_on_fechar_pressed"]
