extends Panel

func _on_firefox_pressed() -> void:
	$JanelaNavegador.show()
	pass # Replace with function body.

func _on_minimizar_pressed() -> void:
	$JanelaNavegador.hide()
	pass # Replace with function body.

func _on_fechar_pressed() -> void:
	$JanelaNavegador.hide()
	pass # Replace with function body.
